inventory list(), new() added
